slurm-8168044.out
Looking in links: https://download.pytorch.org/whl/torch_stable.html
Requirement already satisfied: torch==1.5.0+cu101 in /home/jlpkort/anaconda3/lib/python3.8/site-packages (1.5.0+cu101)
Requirement already satisfied: torchvision==0.6.0+cu101 in /home/jlpkort/anaconda3/lib/python3.8/site-packages (0.6.0+cu101)
Requirement already satisfied: numpy in /home/jlpkort/anaconda3/lib/python3.8/site-packages (from torch==1.5.0+cu101) (1.17.4)
Requirement already satisfied: future in /home/jlpkort/anaconda3/lib/python3.8/site-packages (from torch==1.5.0+cu101) (0.18.2)
Requirement already satisfied: pillow>=4.1.1 in /home/jlpkort/anaconda3/lib/python3.8/site-packages (from torchvision==0.6.0+cu101) (8.2.0)
ERROR: Could not find a version that satisfies the requirement opencv_contrib_python_nonfree==4.1.1.1
ERROR: No matching distribution found for opencv_contrib_python_nonfree==4.1.1.1
Traceback (most recent call last):
  File "main.py", line 3, in <module>
    from engine.trainer import Trainer
  File "/home/jlpkort/vcnet-blind-image-inpainting/engine/trainer.py", line 16, in <module>
    from utils.data_utils import linear_scaling, linear_unscaling
  File "/home/jlpkort/vcnet-blind-image-inpainting/utils/data_utils.py", line 69, in <module>
    from utils.config import get_cfg_defaults
  File "/home/jlpkort/vcnet-blind-image-inpainting/utils/config.py", line 39
    _C.MODEL.MPN.SCHEDULER = []
    ^
SyntaxError: invalid syntax
